# 7bits-CG-2020

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
CMake/: CppLint.cmake  FindBearLibTerminal.cmake
Editor/: Makefile  main.cpp
Editor/Structures/: -1  full-wall  hub-1  hub-2  hub-3  hub-4  struct-10477  struct-104781600  struct-2  struct-hub
include/: Advanced.h  Control.h  ControlSystem.h  Game.h  GenerateMap.h  MapManager.h  Player.h  ScreenOutput.h
include/ECS/: Component.h  Components.h  ECSEngine.h  Entity.h  IComponent.h  Systems.h
include/ECS/Components/: ChestType.h  Controls.h  Defense.h  GameStats.h  Inventory.h  LevelExit.h  MenuProperties.h  Position.h  Sprite.h  Type.h  Weapon.h
include/ECS/Systems/: EnemyControl.h  LevelExitControl.h  MenuControl.h  PlayerControl.h
include/Render/: GUIScreen.h  GameScreen.h  IScreen.h  LevelExitScreen.h  MenuScreen.h  Screen.h
include/Tools/: Collision.h  Commands.h  GenerateMap.h  ICommand.h  Localization.h  MapManager.h  ReaderStruct.h
src/: Control.cpp  ControlSystem.cpp  Game.cpp  GenerateMap.cpp  Player.cpp  ScreenOutput.cpp  main.cpp
src/ECS/Systems/: EnemyControl.cpp  LevelExitControl.cpp  MenuControl.cpp  PlayerControl.cpp  Screen.cpp
src/Localization/: en.txt  ru.txt
src/Render/: GUIScreen.cpp  GameScreen.cpp  LevelExitScreen.cpp  MenuScreen.cpp  Screen.cpp
src/Systems/: Collision.cpp  GenerateMap.cpp  PlayerControl.cpp  Screen.cpp
src/Tools/: Collision.cpp  GenerateMap.cpp  Localization.cpp  MapManager.cpp  ReaderStruct.cpp
src/Tools/Commands/: MoveEnemy.cpp  MovePlayer.cpp
