cmake_minimum_required(VERSION 3.17)
set(CMAKE_CXX_STANDARD 17)
project(game LANGUAGES CXX)

set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/CMake/")
set(CMAKE_CURRENT_BINARY_DIR "${CMAKE_SOURCE_DIR}/bin/")

set(CMAKE_BUILD_WITH_INSTALL_RPATH TRUE)
set(CMAKE_INSTALL_RPATH "./")

add_executable(${PROJECT_NAME} "${CMAKE_SOURCE_DIR}/src/main.cpp")

if(CMAKE_SIZEOF_VOID_P EQUAL 8)
	set(PLATFORM 64)
else()
	set(PLATFORM 32)
endif()

find_package(BearLibTerminal REQUIRED)
include_directories(SYSTEM ${BLT_INCLUDE_DIRS})
target_link_libraries(${PROJECT_NAME} ${BLT_LIBRARIES})

if(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
	file(COPY ${BLT_DLL} DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
else()
	file(COPY ${BLT_LIBRARY} DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
endif()